--- a/Documents/bp_sirljan_2012/sirljan-thesis-2012.tex
+++ b/Documents/bp_sirljan_2012/sirljan-thesis-2012.tex
@@ -344,45 +344,35 @@ V testování je testování...
 \hline
 \multicolumn{3}{|l|}{FUNKČNÍ POŽADAVKY} \\
 \hline
-0 & Ruby ACL je knihovna v jazyce Ruby. Ruby bude umožňovat řízení přístupů pomocí ACL & povinný\\
+0 & RubyACL je knihovna v jazyce Ruby. Ruby bude umožňovat řízení přístupů pomocí ACL & povinný\\
 \hline
-1.0 & Ruby ACL bude umožňovat definovat zmocnitele (principals) & povinný\\
+1.0 & RubyACL bude umožňovat definovat, editovat a mazat zmocnitele (principals) & povinný\\
 \hline
-1.1 & Ruby ACL bude umožňovat definovat oprávnění (privileges) & povinný\\
+1.1 & RubyACL bude umožňovat definovat, editovat a mazat oprávnění (privileges) & povinný\\
 \hline
-1.2 & Ruby ACL bude umožňovat definovat  zdrojové objekty (resource objects) & povinný\\
+1.2 & RubyACL bude umožňovat definovat, editovat a mazat  zdrojové objekty (resource objects) & povinný\\
 \hline
-1.3 & Ruby ACL bude umožňovat editovat or mazat zmocnitele (principals) & povinný\\
+1.3 & RubyACL bude umožňovat definovat, editovat a mazat pravidla přístupu (ACE) & povinný\\
 \hline
-1.4 & Ruby ACL bude umožňovat editovat or mazat oprávnění (privileges) & povinný\\
+2.0 & RubyACL bude umožňovat vytvářet ACL & povinný\\
 \hline
-1.5 & Ruby ACLbude umožňovat editovat or mazat zdrojové objekty (resource objects) & povinný\\
-\hline
-1.6 & Ruby ACL bude umožňovat definovat, editovat a mazat pravidla přístupu (ACE) & povinný\\
-\hline
-2.0 & Ruby ACL bude umožňovat vytvářet ACL & povinný\\
-\hline
-2.1 & Ruby ACL bude umožňovat načítat a ukládat ACL z a do XML souboru & povinný\\
+2.1 & RubyACL bude umožňovat načítat a ukládat ACL z a do XML souboru & povinný\\
 \hline
 2.2 & XML soubor bude definovaný pomocí DTD or XML Schema & povinný\\
 \hline
 2.3 & XML soubor bude "well formated" podle W3C doporučení & povinný\\
 \hline
-3.0 & Ruby ACL will offer Default-Deny policy (At the beginning nobody cannot access to anywhere) or Default-Allow policy (At the beginning everybody can access to everywhere) & povinný\\
+3.0 & RubyACL bude nabízet pouze Default-Deny politiku & povinný\\
 \hline
-4.0 & Ruby ACL bude používat XML-RPC rozhraní ke komunikaci s databází & povinný\\
-\hline
-5.0 & Ruby ACL bude testována na eXist DB & povinný\\
+4.0 & RubyACL bude testována na eXist DB & povinný\\
 \hline
 \multicolumn{3}{|l|}{NEFUNKČNÍ POŽADAVKY} \\
 \hline
-1.0 & Ruby ACL bude naprogramována v jazyce Ruby & povinný \\
+1.0 & RubyACL bude naprogramována v jazyce Ruby & povinný \\
 \hline
-2.0 & Ruby ACL bude vydaná jako RubyGem & volitelný\\
+2.0 & RubyACL bude vydaná jako RubyGem & volitelný\\
 \hline
-3.0 & Ruby ACL potřebuje databázi s XML-RPC rozhraním & povinný\\
-\hline
-4.0 & Ruby ACL potřebuje databázi s podporou xQuery a xQuery Update Facility & povinný\\
+3.0 & RubyACL potřebuje databázi podporující xQuery, xPath technologie & povinný\\
 \hline
 \end{tabular}
 \end{center}
@@ -390,12 +380,31 @@ V testování je testování...
 \label{tab:tab1}
 \end{table}
 
-\section{Dostupné knihovny}
+\section{Existující řešení}
+Existující řešení jsem rozdělil na dvě části. První jsou podnikové a druhé jsou knihovny v Ruby zabývající se stejnou nebo podobnou problematikou.
+\subsection{Podnikové řešení}
+Vybral jsem tři nejukázkovější řešení.
+Oracle má nejpropracovanější model řízení práv. Podporuje integrování LDAP a DAV.
+PhpGACL je bezplatný jednodušší systém spravující přístupy ke zdrojům.
+Obecné řešení se skládá z dvojrozměrné tabulky, kde jeden rozměr je tvořen všemi, kdo vyžadují přístup a druhý rozměr obsahuje objekty, ke kterým je vyžadován přístup. Oprávnění je v buňce, která se nachází na prusečíku os zminěných dvou rozměrů.
+Podrobnější zpracování se nachází v kapitole Analýza a podkapitole Existující řešení. (TODO udělej odkaz)
 
-Ruby knihovny (lehce je popsat): acl9, activeacl, ... 
+\subsection{Dostupné knihovny}
+Kdybych si za cíl nedal vytvořit RubyACL sám, nejspíše bych čerpal z jedné z těchto knihoven.
 
-Reseni Oracle, phpGACL, Obecne. Take lehce popsat. Hlavni popsani bude v analyze.
+Acl9
+Acl9 is yet another solution for role-based authorization in Rails. It consists of two subsystems which can be used separately.
+Role control subsystem allows you to set and query user roles for various objects.
+Access control subsystem allows you to specify different role-based access rules inside controllers.
 
+iq-acl
+This aim of this gem is to provide a series of classes to handle common ACL requirements. Currently provided is the IQ::ACL::Basic class which although super simple, is also extremely powerful. Read more about usage on the IQ::ACL::Basic page.
+
+ActiveACLPlus
+The ActiveAclPlus plugin implements a flexible, fast and easy to use generic access control system. 
+there are no real benchmarks yet. But the system design is based on phpgacl.sourceforge.net, adding object orientation, polymorphism and two levels of caching. PhpGacl claims "A real-world working version with many added layers of complexity supports over 60,000 Accounts, 200 Groups and 300 ACO‘s." Tests on my dev notebook show 10 - 30 times performance improvements compared to active\_rbac.
+caching - uses instance caching and optionally stores permission results in memcached using timeouts. 
+Zdá se, že je instanční.
 
 
 %*****************************************************************************
@@ -501,7 +510,7 @@ access & boolean\\
 \end{table}
 
 \subsection{Ukázky použití}
-Tato podsekce ukazuje předpokládaný způsob použití.
+Tato podsekce ukazuje předpokládaný způsob použití před implementací.
 
 \subsubsection{Příklad kontroly práv}
 \begin{verbatim}
@@ -617,6 +626,21 @@ Ruby-ACL nabídne vlastní přidané privilegia a základní sadu privilegií a 
 \chapter{Realizace}
 Popis implementace/realizace se zaměřením na nestandardní části řešení.
 
+\section{Průběh realizace}
+Fáze 1 
+Po analýze a návrhu byla naimplementována zkušební část, kvůli ověření návrhu tříd a rozhraní. Na této verzi byla napsáno první velká část unit testů. Verze ukládala pouze do instancí nebo polí.
+Fáze 2
+Zprovoznění komunikace s databází. Hledání alternativních možností(sedna apod). Napsání eXistAPI.
+Fáze 3
+Předělání první verze implementace RubyACL z polové/instanční na databázovou. Přepsání tříd z instančních na jakési singlotonské managery. Všechny informace jsou uloženy v databázi. RubyACl pouze vkládá nové záznamy, upravuje a maže staré. Na existujících provádí dotazy a rozhodování o přístupu.
+Fáze 4
+Návrh tříd byl trochu chybný. Implementace předchozích verzí se odchylovala návrhu. Předělání tříd. Vytvoření nadřazené třídy ACL_Object a dědění z této třídy. Intenzivní testování. Usnadnilo odhalit spousty chyb.
+Fáze 5
+Dokončení rozhodovací metody. Dotahování funkcionality. Opravování chyb a nedostatků. Testování v této fázi nejintenzivnější. Dokumentace.
+Fáze 6
+Finalizování - rakefile, rubygem. Dokumentace
+
+
 \section{Programy použité při vývoji}
 \begin{itemize}
 \item NetBeans s Ruby platformou od Thomase Enebo
@@ -637,25 +661,23 @@ Protože databáze Cellstore není plně funkční, nebylo možné implementaci 
 Sedna knihovna v Ruby poskytuje rozhraní pro databázi Sedna. Klient je Ruby rozšíření, které používá ovladač jazyka C, který je dodáván jako součást distribuce Sedna. To má být jednoduché a snadno použitelné. Ovšem zprovoznění knihovny Sedna neproběhlo tak hladce, jak se tvrdí.
 
 \subsection{eXist-db}
-eXist-db je open source systém pro správu databáze vytvořena pomocí technologie XML. Ukládá XML data podle datového modelu XML a nabízí efektivní a XQuery zpracování založené na indexování. Podporuje velké množství technologií. Uvedu zde pouze ty, které se týkají Ruby ACL: XPath 2.0(odkaz), XQuery(odkaz), XML-RPC(odkaz), XQuery Update Facility 1.0(odkaz)
+eXist-db je open source systém pro správu databáze vytvořena pomocí technologie XML. Ukládá XML data podle datového modelu XML a nabízí efektivní a XQuery zpracování založené na indexování. Podporuje velké množství technologií. Uvedu zde pouze ty, které se týkají RubyACL nebo eXistAPI: XPath 2.0(odkaz), XQuery(odkaz), XML-RPC(odkaz), XQuery Update Facility 1.0(odkaz). ExistAPI je komunikační rozhraní, které jsem byl nucený naimplementovat k lazení a testování RubyACL na eXist-db.
 
-XML databáze eXist-db se podobá Cellstore a byla doporučena vedoucím práce jako ideální. Přesto proběhly komplikace s XUpdate navzdory přesné interpretace dokumentace.
+XML databáze eXist-db se podobá Cellstore a byla doporučena vedoucím práce jako ideální. Přesto proběhly komplikace s XUpdate navzdory přesné interpretace dokumentace. Z tohoto důvodu bylo nutné přejít na xQuery Update Facility
 
 
 \subsubsection{eXistAPI}
+
 Trochu nestandartní část realizace. Bylo potřeba si vytvořit komunikační rozhraní mezi databázi eXist-db a RubyACL.
+ExistAPI je komunikační rozhraní, které jsem byl nucený naimplementovat k lazení a testování RubyACL na eXist-db.
 Komunikace s db pomocí eXistAPI.
 Použití xQuery Update Facility místo xUpdate. (Možná vložím ukázku implementace)
-XMLRPC
-xQuery
-xPath
-xQuery Update Facility
-%-------------------------------------
+Komunikace založená na protokolu XML-RPC. K dotazování využívá technologie xQuery a xPath. xQuery Update Facility je zapotřebí k editování dat v databázi.
 
 %-------------------------------------
 \section{Implementace}
 \subsection{Model tříd}
-
+TODO Obrázek.
 \subsection{pracovni poznamky}
 \begin{itemize}
 \item Je třeba se věnovat uvolňování paměti, protože aplikace bude spuštěna dny až měsíce. Špatné zacházení s pamětí by, proto bylo kritické pro server, na kterém aplikace s Ruby-ACL knihovnou bude spuštěna.
@@ -666,6 +688,9 @@ xQuery Update Facility
 \item kdyz smazu nadrazenou skupinu tak smazu vsechny jeji clenstvi
 \end{itemize}
 
+\section{Zdrojové soubory}
+zdrojové soubory jsou v xml formátu. Jejich strukturu popisují dtd soubory.
+
 \section{Rozhraní}
 
 \subsection{RubyACL > DB}
@@ -675,6 +700,7 @@ V ukázkové třídě API je výčet všech potřebných metod, které RubyACL p
 \subsection{Aplikace > RubyACL}
 Jedná se o výčet public metod třídy RubyACL.
 ...přidat výčet
+Na této části záleží bezpočenost. Potencionálně nebezpečné místo k útoku.
 
 %*****************************************************************************
 \chapter{Popis funkcionality - To jak to vlastne funguje}
